# dotfiles

./: .editorconfig  .gitignore  Matt.nix  NixVbox-hw.nix  NixVbox.nix  PortableNix-hw.nix  PortableNix.nix  README.md  constants.nix  flake.nix  iex.exs  repl.nix  tmux.conf.local  utils.nix  vimrc  vimrc_minimal
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link
Old/shell/py311/: default.nix  pyproject.toml
doom.d/: config.el  custom.el  flycheck_config.el  flycheck_init.el  init.el  packages.el
doom.d.old/: packages.el
lib/: default.nix  fix-sources.nix
modules/: fonts.nix  hm.nix  metaInfo.nix  openssh.nix  remote-access.nix
modules_hm/: pay-respects.nix
npins/: sources.json
nvim/: install.fish  lazy-lock.json  lazyvim.json  local_init.vim
overlays/: displaylinkFix.nix  webkitgtk.nix  webkitgtkLLVM.nix  webkitgtkLLVM.nixbak
pkgs/: default.nix  sources.toml
profiles/: ML_Nvidia.nix  adminAccess.nix  backuppc.nix  base.nix  cachix.nix  cockpit.nix  containers.nix  core.nix  crosscompile.nix  dualsense_fix.nix  earlyOOM.nix  font-list.nix  fonts.nix  graphical.nix  guix.nix  homeNetwork.nix  intelQSV.nix  jellyfin.nix  kernelpain.nix  local_llm.nix  myNetwork.nix  mysyncthing.nix  nix.nix  nixsettings.nix  plex.nix  portablenix_builder.nix  qemu.nix  sicp.nix  touchscreen.nix  userMatt.nix  virtualbox.nix  vscodeserver.nix  zfs.nix
scripts/: defancy.pl  doomsync.sh  git_reauthor.bash
secrets/: cache-PherigoNAS-1  cache-PherigoNAS-1.pub  id_ed25519  (+4 more)
(+84 files in other folders)
