[tool.poetry]
name = "mattsPythonShell"
version = "0.1.0"
description = ""
authors = ["Producer Matt <58014742+ProducerMatt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.4.1"
black = "^23.3.0"
pytest = "^7.4.0"
ipython = "^8.14.0"
pylint = "^2.17.4"
pyflakes = "^3.0.1"
isort = "^5.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
